# supernovax

./: .gitignore  CMakeLists.txt  DO_NOT_OPEN.sln  LICENSE.LGPL2  LICENSE.MIT  README.MD  SYNC.TXT  rxgi.sln
base/: CMakeLists.txt
base/applications/: CMakeLists.txt
base/applications/dxdiag/: CMakeLists.txt  RCa20584  display.c  dxdiag.rc  dxdiag_private.h  gui.c  gui.h  help.c  information.c  input.c  main.c  network.c  output.c  output_txt.c  output_xml.c  precomp.h  resource.h  sound.c  system.c
base/applications/fxc/: CMakeLists.txt  fxc.rc
d3d10/: d3d10.vcxproj  d3d10.vcxproj.filters
dll/: CMakeLists.txt
dll/directx/: CMakeLists.txt
dll/directx/ddraw/: CMakeLists.txt  ddraw.def  ddraw.rc  ddraw.spec  ddraw.vcxproj  ddraw.vcxproj.filters  ddrawenum.cpp  ddrawiatl.h  directdraw.cpp  directdraw.h  directdrawclipper.cpp  directdrawclipper.h  directdrawcolorcontrol.cpp  directdrawcolorcontrol.h  directdrawgammacontrol.cpp  directdrawgammacontrol.h  directdrawpalette.cpp  directdrawpalette.h  directdrawsurface.cpp  directdrawsurface.h  directdrawvideoport.cpp  directdrawvideoport.h  dllimports.h  dllmain.cpp  dllmain.h  iddvideoportcontainer.cpp  iddvideoportcontainer.h  pch.cpp  pch.h  resource.h
dll/directx/ddrawhel/: CMakeLists.txt  ddrawhel.cpp  ddrawhel.h  ddrawhel.vcxproj  ddrawhel.vcxproj.filters  helcallbacks.cpp  helcallbacks.h  rosstubs.h
dll/directx/dxguid/: CMakeLists.txt  dxdiag_private.h  dxdiag_private.idl  dxdiagternl.idl  dxgidwm.idl  dxgidwm1_2.idl  dxgipartner.idl  dxgiternl.idl  dxgixaml.idl  dxguid.vcxproj  dxguid.vcxproj.filters  guids.cpp  lockowner.idl  usecounted.idl
dll/directx/dxutils/: CMakeLists.txt  dxutils.h  dxutils.vcxproj  dxutils.vcxproj.filters  helper.cpp  whql.cpp
dll/directx_vista/: CMakeLists.txt
dll/directx_vista/d3d10/: CMakeLists.txt  d3d10.rc  d3d10.vcxproj  d3d10.vcxproj.filters
dll/directx_vista/d3d11/: d3d11.rc  d3d11.vcxproj  d3d11.vcxproj.filters
dll/directx_vista/dxgi/: CMakeLists.txt  d3dkmtstubs.cpp  deviceptr.h  dllcallbacks.h  dllimports.h  dllmain.cpp  dllmain.h  dxgi.rc  dxgi.spec  dxgi.vcxproj  dxgi.vcxproj.filters  dxgi_internal.idl  dxgiadapter.cpp  dxgiadapter.h  dxgidevice.h  dxgifactory.cpp  dxgifactory.h  dxgioutput.cpp  dxgioutput.h  dxgiresource.cpp  dxgiresource.h  dxgisurface.cpp  dxgiswapchain.cpp  dxgiswapchain.h  dxgithunks.h  dxgitypes2.h  guids.cpp  impcb.h  pch.cpp  pch.h  thunkloader.h  utils.cpp  utils.h
dll/directx_vista/dxgidebug/: CMakeLists.txt  dllmain.cpp  dxgidebug.cpp  dxgidebug.h  dxgidebug.rc  dxgidebug.spec  dxgidebug.vcxproj  dxgidebug.vcxproj.filters  dxgiinfoqueue.cpp  dxgiinfoqueue.h  pch.cpp  pch.h
dll/directx_vista/dxgishared/: CMakeLists.txt  dxgidevice.cpp  dxgidevice.h  dxgidevicesubobject.h  dxgikeyedmutex.cpp  dxgikeyedmutex.h  dxgiobject.h  dxgiresource.cpp  dxgiresource.h  dxgishared.cpp  dxgishared.h  dxgishared.vcxproj  dxgishared.vcxproj.filters  dxgisurface.cpp  dxgisurface.h  dxgithunks.h  dxgitypes.h  dxgiusecounted.h  lockedowner.h
dll/directx_vista/dxguid/: dxgi_internal.idl  dxgidwm.h  (+13 more)
dll/fakewine/: CMakeLists.txt  debug.c  fakewine.spec
dxgi/: Resource.rc  d3dkmtstubs.cpp  dllmain.cpp  dllmain.h  dxgi.def  dxgi.vcxproj  dxgi.vcxproj.filters  dxgi_internal.idl  dxgiadapter.cpp  dxgiadapter.h  dxgiadapterdesc.h  dxgidebug.h  dxgidevice.cpp  dxgidevice.h  dxgidevicesubobject.cpp  dxgidevicesubobject.h  dxgifactory.cpp  dxgifactory.h  dxgiinfoqueue.cpp  dxgiinfoqueue.h  dxgikeyedmutex.cpp  dxgikeyedmutex.h  dxgiobject.cpp  dxgiobject.h  dxgioutput.cpp  dxgioutput.h  dxgiresource.cpp  dxgiresource.h  dxgisurface.cpp  dxgisurface.h  dxgiswapchain.cpp  dxgiswapchain.h  dxgitypes.h  exports.cpp  guids.cpp  impcb.h  lockedobject.h  pch.h  stdext.h  utils.cpp  (+1 more)
dxgi/psdk/: d3dkmdt.h  d3dkmthk.h  d3dukmdt.h
dxgidebug/: Resource.rc  dllmain.cpp  dxgidebug.cpp  dxgidebug.h  dxgidebug.vcxproj  dxgidebug.vcxproj.filters  dxgiinfoqueue.cpp  dxgiinfoqueue.h  pch.h
gdi_test/: gdi_test.vcxproj
modules/d3d10_hello_world/: d3d10_hello_world.vcxproj  d3d10_hello_world.vcxproj.filters  d3d10hw.cpp
modules/do_query_interface/: Origine.cpp  do_query_interface.vcxproj
modules/my_test_unrefdll/: my_test_unrefdll.vcxproj
modules/my_tests/: README.TXT  guids.cpp  my_tests.vcxproj  test_adapter.cpp
modules/run_dxdiag/: run_dxdiag.vcxproj
modules/run_pix/: run_pix.vcxproj  run_pix.vcxproj.filters
my_test_unrefdll/: main.cpp  my_test_unrefdll.vcxproj  my_test_unrefdll.vcxproj.filters
my_tests/: main.cpp  my_tests.vcxproj  my_tests.vcxproj.filters  pch.h  test.h  test_adapter.cpp  test_dxgiobject.cpp  test_factory.cpp  test_output.cpp
sdk/cmake/: CMakeMacros.cmake  fake_ros.cmake  msvc.cmake  run_host.cmake
sdk/lib/: CMakeLists.txt
sdk/tools/: CMakeLists.txt
tests/: CMakeLists.txt
tests/d3d10/: CMakeLists.txt
tests/d3d10/d3d10_hello_world/: CMakeLists.txt  d3d10_hello_world.vcxproj
tests/d3d10_hello_world/: d3d10_hello_world.vcxproj  d3d10hw.cpp
tests/d3dcomp/proxy/: CMakeLists.txt  proxy.cpp
tests/ddraw/: CMakeLists.txt
tests/ddraw/ddraw_enum/: CMakeLists.txt  ddenum.rc  ddraw_enum.vcxproj  ddraw_enum.vcxproj.filters  resource.h
tests/ddraw/ddrawi_test_all/: CMakeLists.txt  ddrawi_test_all.vcxproj.filters  print_ddrawi.cpp
tests/ddraw_enum/: ddenum.cpp
tests/ddrawi_test_all/: ddrawi_oncreate.cpp  ddrawi_test_all.vcxproj  drawi_coop_hwnd.cpp  main.cpp  pch.h
tests/do_query_interface/: Origine.cpp  do_query_interface.vcxproj  do_query_interface.vcxproj.filters  do_query_test_vs2010.sln  do_query_test_vs2010.vcxproj
tests/dxdiag/: CMakeLists.txt
tests/dxdiag/dxdiagn_proxy/: CMakeLists.txt  dxdiagn.spec  proxy.cpp  proxy.idl
tests/dxgi/: CMakeLists.txt
tests/dxgi/my_tests/: CMakeLists.txt  guids.cpp  guids.h  main.cpp  myprivatedata.cpp  myprivatedata.h
tests/dxgi_sa_test/: dxgi_sa_test.vcxproj  report_sasa.txt  sasa.cpp
tests/gdi_test/: Origine.cpp
tests/my_test_unrefdll/: my_test_unrefdll.vcxproj
tests/my_tests/: my_tests.vcxproj  pch.h  test.h
win32ss_vista/include/: d3dkmddi.h  d3dkmdt.h  d3dukmdt.h
(+46 files in other folders)
